--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,10 +1,10 @@
 .click
 {
     background-color:black;
-    color:aliceblue;
-    font-size: 50px;
+    color:white;
+    font-size: 28px;
     border:5px outset rgb(220, 205, 205);
-    font-family:'Times New Roman', Times, serif;
+    font-family:'Times New Roman', Times, serif, 'Times New Roman', Times, serif, sans-serif;
     
 
 }
@@ -12,7 +12,7 @@
 {
     background-color:yellow;
     color:black;
-    font-size: 50px;
+    font-size: 28px;
     border:5px outset rgb(212, 195, 195);
-    font-family:'Times New Roman', Times, serif;
+    font-family:'Times New Roman', Times, serif,'Times New Roman', Times, serif, sans-serif;
 }
