--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,28 +2,31 @@ body{
   font-family:Arial, Helvetica, sans-serif
 }
 
-.para,
+/* .para,
 .small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
-}
+} */
 
-.small-para {
+.para.small-para {
+    color: hsl(0, 0%, 0%);
   font-size: 14px;
   font-weight: 800;
 }
 
 .para {
+    color: hsl(0, 0%, 0%);
   font-size: 22px;
+  font-weight: 800;
 }
 
-.confirm {
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
 } 
 
-.button {
+.button  {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
@@ -35,8 +38,8 @@ body{
   font-size: 14px;
 }
 
-div.text {
+/* div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
-}
+} */
